--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ body {
     color: var(--text-color);
 }
 
+.container {
+    display: flex;
+    flex-direction: row;
+}
+
 h1 {
     text-align: center;
     font-size: 2.5rem;
@@ -32,8 +37,8 @@ ul {
 }
 
 main {
-    max-width: 400px;
-    margin: 1rem auto;
+    flex-basis: 50%;
+    margin: 1rem;
     background-color: #fff;
     padding: 1rem;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
@@ -233,4 +238,15 @@ ul li:hover .action {
 #status {
     text-align: center;
     margin-bottom: 0.5rem;
+}
+
+.chart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 50%;
+    margin: 1rem;
+    background-color: #fff;
+    padding: 1rem;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
