--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,6 @@ ul li:hover .action {
     background-color: #fff;
     padding: 1rem;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-    max-height: 600px;
-    margin: auto auto;
+    max-height: 400px;
+    margin: 0 auto;
 }
