--- a/css/style.css
+++ b/css/style.css
@@ -254,3 +254,14 @@ ul li:hover .action {
     max-height: 400px;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 800px) {
+    .container {
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+
+    main {
+        margin: auto;
+    }
+}
