add javascript to html file

--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,26 @@
 }
 
 body {
-    padding: 2rem;
     font-family: Lato, sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
 }
 
-.container {
+.container1 {
     display: flex;
     flex-direction: row;
     margin-top: 50px;
+    margin-left: 10%;
+    margin-right: 10%;
+    gap: 30px;
+}
+
+.topic {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 6px;
+    color: var(--main-color);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
@@ -40,7 +50,6 @@ ul {
 main {
     flex-basis: 50%;
     margin: auto auto;
-    margin-right: 30px;
     background-color: #fff;
     padding: 1rem;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
